@@ -10,6 +10,9 @@ if(exists(".__ADaCGH_WEB_APPL", env = .GlobalEnv)) {
 ## functions, such as changepoints. If things do not work, check
 ## arguments of functions match.
 
+
+
+
 names.formals.changepoints <- c("genomdat",
                                 "data.type",
                                 "alpha",
@@ -28,12 +31,28 @@ names.formals.changepoints <- c("genomdat",
                                 "ngrid",
                                 "tol")
 
-if(!identical(names.formals.changepoints, names(formals(changepoints)))) {
+
+vDNAcopy <- package_version(packageDescription("DNAcopy")$Version)
+if (vDNAcopy >= "1.17.1")
+  {
+    cat("Setting adacgh_changepoints to DNAcopy:::changepoints\n")
+    adacgh_changepoints <- DNAcopy:::changepoints
+    cat("Setting adacgh_trimmed.variance to DNAcopy:::trimmed.variance\n")
+    adacgh_trimmed.variance <- DNAcopy:::trimmed.variance
+  } else {
+    cat("Setting adacgh_changepoints to changepoints\n")
+    adacgh_changepoints <- changepoints
+    cat("Setting adacgh_trimmed.variance to trimmed.variance\n")
+    adacgh_trimmed.variance <- trimmed.variance
+  }
+
+
+if(!identical(names.formals.changepoints, names(formals(adacgh_changepoints)))) {
   m1 <- "Arguments to DNAcopy function changepoints have changed.\n"
   m2 <- "Either your version of DNAcopy is newer than ours, or older.\n"
-  m3 <- "If your version is newer than 1.16.0, please let us know of this problem.\n"
-  m4 <- "We are assuming you are using DNAcopy version 1.16.0,\n"
-  m5 <- "the one for the current stable BioConductor release (v. 2.3).\n"
+  m3 <- "If your version is different from 1.16.0 or 1.17.1,\n please let us know of this problem.\n"
+  m4 <- "We are assuming you are using DNAcopy version 1.16.0 or 1.17.1,\n"
+  m5 <- "the one for the current stable BioConductor release (v. 2.3)\n and the devel releas (v. 2.4).\n"
   m6 <- paste("Your version of DNAcopy is ", packageDescription("DNAcopy")$Version, ".\n")
   mm <- paste(m1, m2, m3, m4, m5, m6)
   stop(mm)
@@ -1455,7 +1474,7 @@ internalSmoothCNA <- function(genomdat,
     ## a single array *chromosome and to be parallelized and fed to internalDNAcopy
    cat("\n      Starting smoothing \n")
     ina <- which(!is.na(genomdat) & !(abs(genomdat) == Inf))
-   trimmed.SD <- sqrt(trimmed.variance(genomdat[ina], trim))
+   trimmed.SD <- sqrt(adacgh_trimmed.variance(genomdat[ina], trim))
    outlier.SD <- outlier.SD.scale * trimmed.SD
    smooth.SD <- smooth.SD.scale * trimmed.SD
    k <- smooth.region
@@ -1510,8 +1529,8 @@ internalDNAcopy <- function(acghdata,
         stop("Either an NA or an infinite in the data")
 
     genomdati <- genomdati[ina]
-    trimmed.SD <- sqrt(trimmed.variance(genomdati, trim))
-    segci <- changepoints(genomdati, data.type = "logratio",
+    trimmed.SD <- sqrt(adacgh_trimmed.variance(genomdati, trim))
+    segci <- adacgh_changepoints(genomdati, data.type = "logratio",
                           alpha = alpha, sbdry = sbdry, sbn = sbn,
                           nperm = nperm, p.method = p.method,
                           ##                               window.size = window.size, 
@@ -4122,7 +4141,7 @@ internalSmoothCNA_A <- function(acghdata, chrom.numeric,
     uchrom <- unique(chrom)
     genomdat <- acghdata
     ina <- which(!is.na(genomdat) & !(abs(genomdat) == Inf))
-    trimmed.SD <- sqrt(trimmed.variance(genomdat[ina], trim))
+    trimmed.SD <- sqrt(adacgh_trimmed.variance(genomdat[ina], trim))
     outlier.SD <- outlier.SD.scale * trimmed.SD
     smooth.SD <- smooth.SD.scale * trimmed.SD
     
@@ -4186,7 +4205,7 @@ internalDNAcopy_A <- function(acghdata,
         stop("Either an NA or an infinite in the data")
 
     genomdati <- genomdati[ina]
-    trimmed.SD <- sqrt(trimmed.variance(genomdati, trim))
+    trimmed.SD <- sqrt(adacgh_trimmed.variance(genomdati, trim))
     chromi <- chrom.numeric[ina]
     sample.lsegs <- NULL
     sample.segmeans <- NULL
@@ -4195,7 +4214,7 @@ internalDNAcopy_A <- function(acghdata,
     for (ic in uchrom) {
 ##         cat("\n DEBUG: internalDNAcopy_A: before changepoints \n")
 ##         browser()
-        segci <- changepoints(genomdati[chromi==ic],
+        segci <- adacgh_changepoints(genomdati[chromi==ic],
                               data.type = "logratio",
                               alpha = alpha, sbdry = sbdry, sbn = sbn,
                               nperm = nperm, p.method = p.method,
