@@ -1,6 +1,7 @@
-1.3-11
-       - Adapted error checking functions to usage with server.
 1.3-10
+       - Adapted error checking functions to usage with server.
+       - Allow usage with DNAcopy 1.17.1 (which now uses a NAMESPACE)
+       - No WARNINGS under R-devel for \code in help files.
        - Missing values caught early on
        - Fix in SegmentPlotWrite when mergeSegs = FALSE
        - Crashes in some figures when chromosomes had a single observation.
